# Rust-file-share-api

./: README.md
file-share-api/: .env  Cargo.toml  Dockerfile  docker-compose.yml  init-db.sh
file-share-api/src/: main.rs
